--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AnimaSoS</title>
     <!-- Bootstrap -->
-    <link href="libs/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="css/style.css">
+    <link href="http://testsite/learn/animefan/asos/libs/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="http://testsite/learn/animefan/asos/css/style.css">
 </head>
 <body>
 <div class="container">
@@ -26,14 +26,14 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="index.html"><img src="img/logo.png" alt="main-logo" width="75"
+                        <a class="navbar-brand" href="http://testsite/learn/animefan/asos/index.php"><img src="http://testsite/learn/animefan/asos/img/logo.png" alt="main-logo" width="75"
                                                                        height="75px"></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="main-nav collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="index.html">Гостевая</a></li>
+                            <li class="active"><a href="http://testsite/learn/animefan/asos/index.php">Гостевая</a></li>
                             <li><a href="#">Новости</a></li>
                             <li><a href="#">Участники</a></li>
 
@@ -55,8 +55,8 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Авторизация <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="auth.html">Войти</a></li>
-                                    <li><a href="registration.html">Зарегистрироваться</a></li>
+                                    <li><a href="?mode=auth">Войти</a></li>
+                                    <li><a href="?mode=reg">Зарегистрироваться</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -81,11 +81,13 @@
         </div>
     </main><!-- /main-intro row-->
 
+
+
 </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="libs/bootstrap/js/bootstrap.js"></script>
+<script src="http://testsite/learn/animefan/asos/libs/bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
