--- a/html/registration.html
+++ b/html/registration.html
@@ -26,14 +26,17 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="http://testsite/learn/animefan/asos/index.php"><img src="http://testsite/learn/animefan/asos/img/logo.png" alt="main-logo" width="75"
-                                                                       height="75px"></a>
+                        <a class="navbar-brand" href="http://testsite/learn/animefan/asos/html/index.html"><img
+                                src="http://testsite/learn/animefan/asos/img/logo.png" alt="main-logo" width="75"
+                                height="75px"></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="main-nav collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li><a href="http://testsite/learn/animefan/asos/index.php">Гостевая</a></li>
+                            <li class="active"><a
+                                    href="http://testsite/learn/animefan/asos/html/index.html">Гостевая</a>
+                            </li>
                             <li><a href="#">Новости</a></li>
                             <li><a href="#">Участники</a></li>
 
@@ -55,8 +58,9 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Авторизация <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="?mode=auth">Войти</a></li>
-                                    <li><a href="?mode=reg">Зарегистрироваться</a></li>
+                                    <li><a href="http://testsite/learn/animefan/asos/html/auth.html">Войти</a></li>
+                                    <li><a href="http://testsite/learn/animefan/asos/html/registration.html">Зарегистрироваться</a>
+                                    </li>
                                 </ul>
                             </li>
                         </ul>
@@ -68,10 +72,14 @@
 
     <main class="main-registration row">
         <div class="main-registration__img hidden-xs hidden-sm col-md-4 col-lg-4"></div>
-        <form action="" name="registration" class="form-registration col-md-4 col-lg-4">
+        <form action="http://testsite/learn/animefan/asos/php/registration.php" method="post" name="registration"
+              class="form-registration col-md-4 col-lg-4">
             <h2 class="form-registration__header text-center">Присоединяйтесь</h2>
 
             <div class="form-registration__item-list">
+                <?php if ($message): ?>
+                <p class="form-registration__server-message"><?= $message ?></p>
+                <?php endif; ?>
                 <label class="form-registration__item">
                     Ваш email: <br>
                     <input class="form-control" type="text" name="registration[email]">
@@ -91,13 +99,8 @@
                     (не обязательно)
                     <input type="number" min="8" class="form-control" name="registration[age]">
                 </label>
-                <label class="form-registration__item">
-                    Номер вашей кредитной карты:<br>
-                    (Если введешь текст,тоби пизда)
-                    <input type="text" class="form-control" name="registration[money]">
-                </label>
             </div>
-            <button class="btn btn-lg btn-primary btn-block">
+            <button type="submit" class="btn btn-lg btn-primary btn-block">
                 Зарегистрироваться
             </button>
 
