--- a/html/successful_reg.html
+++ b/html/successful_reg.html
@@ -70,27 +70,21 @@
         </div>
     </header>
 
-    <div class="main-authentication row">
-        <div class="main-authentication__img hidden-xs hidden-sm col-md-3 col-lg-3 col-md-offset-2 col-lg-offset-2">
+    <main class="successfull-reg row">
+        <div class="successfull-reg__img hidden-xs hidden-sm col-md-5 col-lg-5 col-md-offset-1 col-lg-offset-1">
 
         </div>
-
-        <form action="http://testsite/learn/animefan/asos/php/authentication.php" method="post" name="authentication" class="main-authentication__form-signin col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1" name="auth" role="form">
-            <?php if ($message): ?>
-            <p class="form-registration__server-message"><?= $message ?></p>
-            <?php endif; ?>
-            <h2 class="form-signin-heading">Пожалуйста, войдите</h2>
-            <input type="email" class="form-control" placeholder="Email address" name="authentication[email]" required
-                   autofocus>
-            <input type="password" class="form-control" placeholder="Password" required name="authentication[password]">
-            <label class="checkbox">
-                <input type="checkbox" value="remember-me" name="authentication[remember_me]"> Remember me
-            </label>
-            <button class="btn btn-lg btn-primary btn-block" type="submit">Войти</button>
-        </form>
-
-    </div> <!-- /container -->
-
+        <div class="successfull-reg__message-block col-md-6 col-lg-6">
+            <p class="successfull-reg__message text-center">
+                Поздравляем.<br>
+                Вы, успешно зарегистрировались на нашем ресурсе!
+                Дело за малым, авторизируйтесь и свершайте великие дела!
+            </p>
+            <a href="http://testsite/learn/animefan/asos/html/auth.html" class="successful-reg__btn btn btn-primary btn-lg" role="button">
+                Авторизация
+            </a>
+        </div>
+    </main>
 </div>
 
 
