--- a/html/auth.html
+++ b/html/auth.html
@@ -26,7 +26,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="http://testsite/learn/animefan/asos/html/index.html"><img
+                        <a class="navbar-brand" href="http://testsite/learn/animefan/asos/php/index.php"><img
                                 src="http://testsite/learn/animefan/asos/img/logo.png" alt="main-logo" width="75"
                                 height="75px"></a>
                     </div>
@@ -34,8 +34,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="main-nav collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a
-                                    href="http://testsite/learn/animefan/asos/html/index.html">Гостевая</a>
+                            <li class="active"><a href="http://testsite/learn/animefan/asos/php/index.php">Гостевая</a>
                             </li>
                             <li><a href="#">Новости</a></li>
                             <li><a href="#">Участники</a></li>
@@ -58,9 +57,8 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Авторизация <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="http://testsite/learn/animefan/asos/html/auth.html">Войти</a></li>
-                                    <li><a href="http://testsite/learn/animefan/asos/html/registration.html">Зарегистрироваться</a>
-                                    </li>
+                                    <li><a href="?mode=auth">Войти</a></li>
+                                    <li><a href="?mode=reg">Зарегистрироваться</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -75,7 +73,9 @@
 
         </div>
 
-        <form action="http://testsite/learn/animefan/asos/php/authentication.php" method="post" name="authentication" class="main-authentication__form-signin col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1" name="auth" role="form">
+        <form action="" method="post" name="authentication"
+              class="main-authentication__form-signin col-md-4 col-lg-4 col-md-offset-1 col-lg-offset-1" name="auth"
+              role="form">
             <?php if ($message): ?>
             <p class="form-registration__server-message"><?= $message ?></p>
             <?php endif; ?>
