--- a/html/index.html
+++ b/html/index.html
@@ -26,14 +26,15 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="http://testsite/learn/animefan/asos/html/index.html"><img src="http://testsite/learn/animefan/asos/img/logo.png" alt="main-logo" width="75"
+                        <a class="navbar-brand" href="http://testsite/learn/animefan/asos/php/index.php"><img src="http://testsite/learn/animefan/asos/img/logo.png" alt="main-logo" width="75"
                                                                        height="75px"></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="main-nav collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="http://testsite/learn/animefan/asos/html/index.html">Гостевая</a></li>
+                            <li class="active"><a href="http://testsite/learn/animefan/asos/php/index.php">Гостевая</a>
+                            </li>
                             <li><a href="#">Новости</a></li>
                             <li><a href="#">Участники</a></li>
 
@@ -55,8 +56,8 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Авторизация <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="http://testsite/learn/animefan/asos/html/auth.html">Войти</a></li>
-                                    <li><a href="http://testsite/learn/animefan/asos/html/registration.html">Зарегистрироваться</a></li>
+                                    <li><a href="?mode=auth">Войти</a></li>
+                                    <li><a href="?mode=reg">Зарегистрироваться</a></li>
                                 </ul>
                             </li>
                         </ul>
