--- a/html/successful_reg.html
+++ b/html/successful_reg.html
@@ -26,7 +26,7 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                         </button>
-                        <a class="navbar-brand" href="http://testsite/learn/animefan/asos/html/index.html"><img
+                        <a class="navbar-brand" href="http://testsite/learn/animefan/asos/php/index.php"><img
                                 src="http://testsite/learn/animefan/asos/img/logo.png" alt="main-logo" width="75"
                                 height="75px"></a>
                     </div>
@@ -34,8 +34,7 @@
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="main-nav collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a
-                                    href="http://testsite/learn/animefan/asos/html/index.html">Гостевая</a>
+                            <li class="active"><a href="http://testsite/learn/animefan/asos/php/index.php">Гостевая</a>
                             </li>
                             <li><a href="#">Новости</a></li>
                             <li><a href="#">Участники</a></li>
@@ -58,9 +57,8 @@
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Авторизация <b
                                         class="caret"></b></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="http://testsite/learn/animefan/asos/html/auth.html">Войти</a></li>
-                                    <li><a href="http://testsite/learn/animefan/asos/html/registration.html">Зарегистрироваться</a>
-                                    </li>
+                                    <li><a href="?mode=auth">Войти</a></li>
+                                    <li><a href="?mode=reg">Зарегистрироваться</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -80,7 +78,8 @@
                 Вы, успешно зарегистрировались на нашем ресурсе!
                 Дело за малым, авторизируйтесь и свершайте великие дела!
             </p>
-            <a href="http://testsite/learn/animefan/asos/html/auth.html" class="successful-reg__btn btn btn-primary btn-lg" role="button">
+            <a href="http://testsite/learn/animefan/asos/html/auth.html"
+               class="successful-reg__btn btn btn-primary btn-lg" role="button">
                 Авторизация
             </a>
         </div>
