актуальное состояние репы

--- a/html/registration.html
+++ b/html/registration.html
@@ -80,17 +80,17 @@
                 <?php endif; ?>
                 <label class="form-registration__item">
                     Ваш email: <br>
-                    <input class="form-control" type="text" name="registration[email]">
+                    <input class="form-control" type="text" name="registration[email]" required autofocus>
                 </label>
                 <label class="form-registration__item">
                     Ваш никнейм :<br>
                     (без специальных символов)
-                    <input type="text" class="form-control" name="registration[username]">
+                    <input type="text" class="form-control" name="registration[username]" required>
                 </label>
                 <label class="form-registration__item">
                     Придумайте пароль:<br>
                     (минимум 8 символов)
-                    <input type="text" class="form-control" name="registration[password]">
+                    <input type="text" class="form-control" name="registration[password]" required>
                 </label>
                 <label class="form-registration__item">
                     Ваш возраст:<br>
