--- a/html/successful_reg.html
+++ b/html/successful_reg.html
@@ -78,7 +78,7 @@
                 Вы, успешно зарегистрировались на нашем ресурсе!
                 Дело за малым, авторизируйтесь и свершайте великие дела!
             </p>
-            <a href="http://testsite/learn/animefan/asos/html/auth.html"
+            <a href="?mode=auth"
                class="successful-reg__btn btn btn-primary btn-lg" role="button">
                 Авторизация
             </a>
