--- a/html/users.html
+++ b/html/users.html
@@ -27,7 +27,7 @@
                             <span class="icon-bar"></span>
                         </button>
                         <a class="navbar-brand" href="http://testsite/learn/animefan/asos/php/index.php"><img src="http://testsite/learn/animefan/asos/img/logo.png" alt="main-logo" width="75"
-                                                                       height="75px"></a>
+                                                                                                              height="75px"></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
@@ -79,28 +79,22 @@
         </div>
     </header>
 
+    <main class="main-block row">
+        <div class="users-block col-md-7 col-lg-7">
 
-    <main class="main-intro row">
-        <div class="main-intro__img col-lg-6"></div>
-        <div class="main-intro__jumbotron col-lg-6">
-            <div class="jumbotron">
-                <h1>Cкажи привет Аниме!</h1>
-
-                <p>Любишь Аниму? Конечно да, а если нет, то ты не с нами, а кто не с нами тот
-                    под нами. Погружайся в мир настоящего исскуства и удовольствия на нашем сайте.</p>
-
-                <p><a class="btn btn-primary btn-lg" role="button">Узнать больше</a></p>
-            </div>
         </div>
-    </main><!-- /main-intro row-->
 
+        <div class="main-block__img hidden-xs hidden-sm col-md-5 col-lg-5">
+        </div>
 
+    </main>
 
-</div>
+    </div>
 
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
 <script src="http://testsite/learn/animefan/asos/libs/bootstrap/js/bootstrap.js"></script>
+
 </body>
 </html>
