--- a/html/index.html
+++ b/html/index.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>AnimaSoS</title>
     <!-- Bootstrap -->
-    <link href="http://testsite/learn/animefan/asos/libs/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://testsite/learn/animefan/asos/css/style.css">
+    <link href="../libs/bootstrap/css/bootstrap.css" rel="stylesheet">
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
 <div class="container">
@@ -25,15 +25,15 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="http://testsite/learn/animefan/asos/php/index.php"><img src="http://testsite/learn/animefan/asos/img/logo.png" alt="main-logo" width="75"
+                        </button>t
+                        <a class="navbar-brand" href="../php/index.php"><img src="../img/logo.png" alt="main-logo" width="75"
                                                                        height="75px"></a>
                     </div>
 
                     <!-- Collect the nav links, forms, and other content for toggling -->
                     <div class="main-nav collapse navbar-collapse" id="bs-example-navbar-collapse-1">
                         <ul class="nav navbar-nav">
-                            <li class="active"><a href="http://testsite/learn/animefan/asos/php/index.php">Гостевая</a>
+                            <li class="active"><a href="../php/index.php">Гостевая</a>
                             </li>
                             <li><a href="#">Новости</a></li>
                             <li><a href="?mode=usr">Участники</a></li>
@@ -101,6 +101,6 @@
 <!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
 <!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://testsite/learn/animefan/asos/libs/bootstrap/js/bootstrap.js"></script>
+<script src="../libs/bootstrap/js/bootstrap.js"></script>
 </body>
 </html>
