--- a/html/registration.html
+++ b/html/registration.html
@@ -1,72 +1,4 @@
-<!DOCTYPE html>
-<html lang="ru">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>AnimaSoS</title>
-    <!-- Bootstrap -->
-    <link href="http://testsite/learn/animefan/asos/libs/bootstrap/css/bootstrap.css" rel="stylesheet">
-    <link rel="stylesheet" href="http://testsite/learn/animefan/asos/css/style.css">
-</head>
-<body>
-<div class="container">
-    <header class="page-header">
-        <h1 class="page-header__site-title text-center">AnimaSos</h1>
-
-        <div class="container">
-            <nav class="navbar navbar-default" role="navigation">
-                <div class="container-fluid">
-                    <!-- Brand and toggle get grouped for better mobile display -->
-                    <div class="navbar-header">
-                        <button type="button" class="navbar-toggle" data-toggle="collapse"
-                                data-target="#bs-example-navbar-collapse-1">
-                            <span class="sr-only">Toggle navigation</span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                            <span class="icon-bar"></span>
-                        </button>
-                        <a class="navbar-brand" href="http://testsite/learn/animefan/asos/php/index.php"><img
-                                src="http://testsite/learn/animefan/asos/img/logo.png" alt="main-logo" width="75"
-                                height="75px"></a>
-                    </div>
-
-                    <!-- Collect the nav links, forms, and other content for toggling -->
-                    <div class="main-nav collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-                        <ul class="nav navbar-nav">
-                            <li class="active"><a href="http://testsite/learn/animefan/asos/php/index.php">Гостевая</a>
-                            </li>
-                            <li><a href="#">Новости</a></li>
-                            <li><a href="#">Участники</a></li>
-
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Анима <b
-                                        class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="#">Новинки</a></li>
-                                    <li><a href="#">Лучшее за месяц</a></li>
-                                    <li><a href="#">Лучшее за все время</a></li>
-                                    <li class="divider"></li>
-                                    <li><a href="#">Скачать</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-
-                        <ul class="nav navbar-nav navbar-right">
-                            <li class="dropdown">
-                                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Авторизация <b
-                                        class="caret"></b></a>
-                                <ul class="dropdown-menu">
-                                    <li><a href="?mode=auth">Войти</a></li>
-                                    <li><a href="?mode=reg">Зарегистрироваться</a></li>
-                                </ul>
-                            </li>
-                        </ul>
-                    </div><!-- /.navbar-collapse -->
-                </div><!-- /.container-fluid -->
-            </nav>
-        </div>
-    </header>
+<?php require 'header.html'; ?>
 
     <main class="main-registration row">
         <div class="main-registration__img hidden-xs hidden-sm col-md-4 col-lg-4"></div>
@@ -80,22 +12,22 @@
                 <?php endif; ?>
                 <label class="form-registration__item">
                     Ваш email: <br>
-                    <input class="form-control" type="text" name="registration[email]" required autofocus>
+                    <input class="form-control" type="text" name="registration[email]" required autofocus maxlength="15">
                 </label>
                 <label class="form-registration__item">
                     Ваш никнейм :<br>
                     (без специальных символов)
-                    <input type="text" class="form-control" name="registration[username]" required>
+                    <input type="text" class="form-control" name="registration[username]" required maxlength="15">
                 </label>
                 <label class="form-registration__item">
                     Придумайте пароль:<br>
                     (минимум 8 символов)
-                    <input type="text" class="form-control" name="registration[password]" required>
+                    <input type="text" class="form-control" name="registration[password]" required maxlength="15">
                 </label>
                 <label class="form-registration__item">
                     Ваш возраст:<br>
                     (не обязательно)
-                    <input type="number" min="8" class="form-control" name="registration[age]">
+                    <input type="number" min="8" max="200" class="form-control" name="registration[age]">
                 </label>
             </div>
             <button type="submit" class="btn btn-lg btn-primary btn-block">
@@ -108,9 +40,6 @@
 </div>
 
 
-<!-- jQuery (necessary for Bootstrap's JavaScript plugins) -->
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
-<!-- Include all compiled plugins (below), or include individual files as needed -->
-<script src="http://testsite/learn/animefan/asos/libs/bootstrap/js/bootstrap.js"></script>
+<?php require 'footer.html'; ?>
 </body>
 </html>
