Изменения почти месячной давности

--- a/html/users.html
+++ b/html/users.html
@@ -38,7 +38,7 @@
 
                 <?php endif; ?>
             </table>
-            <div>
+            <div class="users-block__pagination">
                 <?= $pag ?>
             </div>
 
