--- a/html/header.html
+++ b/html/header.html
@@ -59,7 +59,7 @@
                             <li class="dropdown">
                                 <a href="#" class="dropdown-toggle" data-toggle="dropdown"><?= $user ?></a>
                                 <ul class="dropdown-menu">
-                                    <li><a href="№">Личный Кабинет</a></li>
+                                    <li><a href="#">Личный Кабинет</a></li>
                                     <li><a href="<?php echo $_SERVER['PHP_SELF'];?>?auth=none">Выйти</a></li>
                                 </ul>
                             </li>
